--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
-  <h1>Play the card game War!</h1>
+  <h1>Play the Card Game War!</h1>
+  <h3 class="instructions">Click "New Game" to start!</h3>
   <div class="container">
     <div class="row">
       <div class="player player1 col-md-3">
