ties are resolved

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <div class="controls col-md-3">
         <input type="button" value="New Game" id="newGame">
         <input type="button" value="play" id="play">
+        <br>
+        <input type="button" value="play war to break a tie!" id="playWar" class="hidden">
         <p id="result"></p>
         <p>Turns remaining: <span id="turns"></span></p>
       </div>
